bdr.BDR.scala.error
Erreur de compilation :
BDR:69: error: Unmatched closing brace '}' ignored here
	}
        ^