bdr.BDR.scala.code
var arret:Boolean = false

var msg:String = litMessage()

while (!arret)

  if(msg == "R"){

    droite()

  }
  else if(msg == "L"){

    gauche()

  }
  else if(msg == "I"){

    gauche()
    gauche()
    avance()

  }
  else if(msg == "A"){

    avance()

  }
  else if(msg == "B"){

    avance()
    avance()

  }
  else if(msg == "C"){

    avance()
    avance()
    avance()

  }
  else if(msg == "Z"){

    recule()

  }
  else if(msg == "Y"){

    recule()
    recule()

  }
  else if(msg == "X"){

    recule()
    recule()
    recule()

  }

	else{
    
    arret = true
    
  }

}